feat: add update table in api
