# backend/cmd/gomyadm/main.go
@@ -71,6 +71,7 @@ func main() {
 		r.Route("/table", func(r chi.Router) {
 			r.Get("/", tableHandler.GetAll)
 			r.Post("/", tableHandler.Create)
+			r.Put("/{oldName}/{newName}", tableHandler.Update)
 			
 			r.Route("/item", func(r chi.Router) {
 				r.Get("/{table}", itemHandler.GetAll)
