# backend/docs/swagger.json
@@ -571,6 +571,45 @@
                     }
                 }
             }
+        },
+        "/table/{oldName}/{newName}": {
+            "put": {
+                "description": "Altera uma tabela",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "table"
+                ],
+                "summary": "Altera tabela",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Nome atual",
+                        "name": "oldName",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Nome novo",
+                        "name": "newName",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/respond.Response"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -734,7 +773,8 @@
                     }
                 },
                 "name": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "teste"
                 }
             }
         },
